fix(search): note path not visible in search (closes #7404)

--- a/apps/client/src/widgets/collections/legacy/ListOrGridView.css
+++ b/apps/client/src/widgets/collections/legacy/ListOrGridView.css
@@ -106,6 +106,12 @@
     text-align: center;
 }
 
+.note-list.list-view .note-path {
+    margin-left: 0.5em;
+    vertical-align: middle;
+    color: var(--muted-color);
+}
+
 /* #region Grid view */
 .note-list.grid-view .note-list-container {
     display: flex;
